 * NEW: Process properties window
 * NEW: Displays more information about tokens
 * NEW: Displays information about Events, Mutants, Sections and Tokens 
   other processes have handles to
 * NEW: Terminator tool - tries to terminate processes using many different 
   techniques
 * NEW: Highlighting for UAC elevated processes
 * NEW: Struct reader (with support for user-defined structs)
 * FIXED: Shows SIDs without names in SDDL format
 * FIXED: Less "Access denied" errors - uses PROCESS_QUERY_LIMITED_INFORMATION 
   on Vista
 * FIXED: Major refactoring of Win32 code

1.2.6.5
 * A new member of the project - Dean
 * Can view thread usernames, groups and privileges
 * The handle filter window is now faster
 * Added thread start addresses in thread list
 * The process list now has less CPU usage
 * Fixed some processes not having icons

1.2.6.0
 * Fixed the fix for the huge regression - the cause was a double "free" of the same handle
 * Added Assistant - can start processes as any user, including SYSTEM, 
   LOCAL SERVICE and NETWORK SERVICE. Injector's create process item is 
   now deprecated.
 * Fixed service handle leaks which caused service deletions to be 
   undetected.
 * Fixed service list in process tooltips when new own-process services are started and when 
   shared-process services are stopped.

1.2.5.1
 * Fixed huge regression caused by revision #250 in Win32.ProcessHandle.~ProcessHandle()

1.2.5.0
 * Fixed wrong usernames when Process Hacker is running as a non-admin user
 * Gets command line of processes without using Injector
 * Added highlighting for debugged processes
 * Added viewing/setting of process affinity
 * Fixed all handle leaks
 * Added I/O counters to misc. info
 * Added CPU usage column
 * Fixed services in tooltips
 * Added highlighting for processes with services
 * System and System Idle Processes now have usernames (hardcoded in)
 * Handle finder now only searches in processes with same session ID (faster, 
   avoids hangs)